--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "prepare": "husky install",
-    "commit": "git add . && cz"
+    "commit": "git add . && git-cz"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.2",
@@ -15,6 +14,7 @@
     "@octokit/auth-app": "^6.0.4",
     "@octokit/rest": "^20.0.2",
     "@probot/get-private-key": "^1.1.2",
+    "async": "^3.2.5",
     "axios": "^1.6.0",
     "lodash": "^4.17.21",
     "nanoid": "^3.3.7",
@@ -31,8 +31,6 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.0",
-    "@commitlint/config-conventional": "^17.0.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "19.5.3",
@@ -50,14 +48,15 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@theunderscorer/nx-semantic-release": "^2.11.0",
+    "@types/async": "^3.2.24",
     "@types/jest": "^29.4.0",
     "@types/lodash": "^4.17.7",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
-    "husky": "^8.0.0",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "nx": "19.5.3",
@@ -72,5 +71,10 @@
   "packageManager": "yarn@4.3.1",
   "nx": {
     "includedScripts": []
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
